[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Pigeon Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.56321, 3.23768 )

[sub_resource type="Animation" id=2]
resource_name = "p1"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.420448, 0.225313, 3.13834, 1 ),
"update": 1,
"values": [ 11, 12, 13, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "p2"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.420448, 0.225313, 3.13834, 1 ),
"update": 1,
"values": [ 22, 23, 24, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "p3"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.420448, 0.225313, 3.13834, 1 ),
"update": 1,
"values": [ 44, 45, 46, 45 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.60004, 0.790644 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.86736, 3.63831 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( -0.5, 0.625 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
speed = Vector2( 100, 800 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.736411, 1.27169 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 10
hframes = 11
frame = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "p1"
anims/p1 = SubResource( 2 )
anims/p2 = SubResource( 3 )
anims/p3 = SubResource( 4 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.510768, 0.496531 )
scale = Vector2( 0.602933, 0.438169 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( -0.702305, -3.33079 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( -0.0371647, 0.371627 )
shape = SubResource( 5 )

[node name="HitPlayer" type="Area2D" parent="."]
position = Vector2( -0.594604, 1.22637 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitPlayer"]
position = Vector2( -0.0371647, 9.53674e-07 )
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 34.9121, 0.687464 )
scale = Vector2( 4.13485, 0.456254 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="HitPlayer" to="." method="_on_HitPlayer_body_entered"]
[connection signal="body_exited" from="HitPlayer" to="." method="_on_HitPlayer_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
